{
    "name": "Controls",
    "maps": [
        {
            "name": "InGame",
            "id": "c9d2dcd3-4689-4458-95d5-3881eefa346e",
            "actions": [
                {
                    "name": "CameraMovement",
                    "type": "Value",
                    "id": "b9cd4200-2348-4832-87a9-7d202000a435",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraSprint",
                    "type": "Button",
                    "id": "4165d590-83fc-42b5-b01f-8ed4529507da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraScroll",
                    "type": "Value",
                    "id": "650a702f-ebe0-4eda-853e-464cfc769ac5",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraRotation",
                    "type": "Value",
                    "id": "6adf67f1-b80a-4893-9a3a-10767107b108",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shift",
                    "type": "Button",
                    "id": "25ba70fa-f3ce-470b-974d-649c01c4e83d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "80dbd5dd-709e-44a1-b950-139a3fe8c748",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "4556e98d-309e-419a-9a14-c58ee6d08f3b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Place",
                    "type": "Button",
                    "id": "f52ac7ca-4a1e-42dd-8341-238b7f46fb36",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "5e8e0e86-8435-423e-b3f9-f0101b610c55",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bbce0c02-166d-4cde-8959-95157daf22a6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3be6ec7a-656d-4937-9fc3-3d1ef56c5129",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "72d6219d-fa77-4634-a1d1-99e459c28ac9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2b4ce309-29aa-4378-8000-0b4117eb95a1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "90fe2f26-f7d3-41b2-ad4c-4fb8d815d6ad",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Place",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5ace0ed-870a-4042-87df-8949a0e6527d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64da14e7-e0f2-4964-8db8-3e8e1c183491",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82d797a5-52f2-473a-bdd1-fcc956d774f4",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "QE",
                    "id": "ab9b0d56-01f3-40a9-8dda-6837b559ea25",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "8d511c7b-7f2f-4c47-9bde-20c31e51c5fe",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "ad155284-bad5-456c-8c78-13187be79fee",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Mouse scroll",
                    "id": "56e6b35a-e48b-4a16-9311-a1b1766413b2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraScroll",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2f747451-1ee5-4627-8ccb-907592a674ff",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ff1c794e-0863-492c-becc-798432b3a61c",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6f8afda5-2070-49f7-bede-a86d410060df",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraSprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "adb67511-4bb6-495e-8ef5-fea1bd906034",
            "actions": [
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "f8ad0456-55c1-447d-84cd-6994aa99c56a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "123fe9f2-c13b-4db8-953f-d1aa8c4d444e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ctrl",
                    "type": "Button",
                    "id": "4ecf67ce-b982-4c85-9a83-86331ad701aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotkey1",
                    "type": "Button",
                    "id": "6a9e8041-d132-4cf8-b436-22d18546849d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotkey2",
                    "type": "Button",
                    "id": "0ac1708e-6b48-4829-8050-d5ee7f650639",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotkey3",
                    "type": "Button",
                    "id": "de429163-b4d4-4671-aec5-00a557042977",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotkey4",
                    "type": "Button",
                    "id": "8055c9fb-ded2-452c-a9ab-773942ed730b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotkey5",
                    "type": "Button",
                    "id": "43bb6ccf-2f7f-401f-b4db-ee6775f59356",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotkey6",
                    "type": "Button",
                    "id": "5884bfc6-11fa-4071-9e2d-4fd2f23463ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Clear",
                    "type": "Button",
                    "id": "1d785eba-4278-42a9-858e-4b9f40fdd40c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a8e8ebbe-abb6-4257-80a2-0a47962ab2f3",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b4edb86-417b-4b1e-a152-b404fda3ffae",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotkey1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "082256b8-a5c3-49ac-bb2c-d60dc0f38c02",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotkey2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26ba4819-0e1b-4391-bccf-b45020c167b3",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotkey3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20aa146d-2dcb-414e-9ec5-7ef485b0a390",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotkey4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1e0d9ed-9854-4a46-abdd-d32cf5e5ccdb",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotkey5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27a71fbf-6e2d-4280-a657-2728df3e368c",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotkey6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a50f7d0-b2a2-4d25-95c5-6344f7f9d52c",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ctrl",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3249f896-051f-4876-bebe-737db0733c9d",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ffd6e19-f9aa-43a2-a48c-a280518bbb0d",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Clear",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}